--- a/sass/abstract/variables.scss
+++ b/sass/abstract/variables.scss
@@ -1,13 +1,22 @@
 // colors/////////////
-$color-light-green: #7ed56f;
-$color-medium-green: #55c57a;
-$color-dark-green: #28b485;
-$color-dark-grey: #777;
-$color-light-grey: #f7f7f7;
-$color-white: #fff;
-$color-black: #000;
+$color-light-green : #7ed56f;
+$color-medium-green : #55c57a;
+$color-dark-green : #28b485;
+$color-light-orange : #ffb900;
+$color-dark-orange : #ff7730;
+$color-light-blue : #2998ff;
+$color-dark-blue : #5643fa;
+$color-dark-grey : #777;
+$color-light-grey : #f7f7f7;
+$color-white : #fff;
+$color-black : #000;
+
+$color-gradient-green : linear-gradient(to right, $color-light-green, $color-dark-green);
+
+// fonts////////////
+$default-font-size : 1.6rem;
 
 // grid/////////////////
-$grid-width: 114rem;
-$gutter-vertical: 6rem;
-$gutter-horizontal: 2rem;
+$grid-width : 114rem;
+$gutter-vertical : 8rem;
+$gutter-horizontal : 6rem;
