--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -1,6 +1,6 @@
 .header {
     height: 95vh;
-    background-image: linear-gradient(to right bottom, rgba($color-light-green, 0.8), rgba($color-dark-green, 0.8)), url(../../img/hero.jpg);
+    background-image: linear-gradient(to right bottom, rgba($color-light-green, 0.8), rgba($color-dark-green, 0.8)), url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
