--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,4 @@
 @import "component/composition.scss";
 @import "component/feature_box.scss";
 @import "component/card.scss";
+@import "component/story.scss";
