--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,17 @@ body {
 .u-mb-lg {
   margin-bottom: 8rem; }
 
+.u-mb-md {
+  margin-bottom: 4rem; }
+
 .u-mb-sm {
   margin-bottom: 1.5rem; }
+
+.u-mt-lg {
+  margin-top: 8rem; }
+
+.u-mt-xl {
+  margin-top: 10rem; }
 
 .header {
   height: 95vh;
@@ -189,9 +198,14 @@ body {
     width: calc(3 * ((100% - (3 * 6rem)) / 4) + (2* 6rem)); }
 
 .section-about, .section-tours {
-  padding: 25rem 0;
   margin-top: -25vh;
   background-color: #f7f7f7; }
+
+.section-about {
+  padding: 25rem 0; }
+
+.section-tours {
+  padding: 25rem 0 10rem 0; }
 
 .section-features {
   padding: 20rem 0;
@@ -210,11 +224,21 @@ body {
     -ms-transform: skewY(8deg);
     -o-transform: skewY(8deg); }
 
+.section-stories {
+  padding: 15rem 0;
+  background-color: #f7f7f7; }
+
 .btn-white {
   background-color: #fff;
   color: #777; }
   .btn-white::after {
     background-color: #fff; }
+
+.btn-green {
+  background-color: #55c57a;
+  color: #fff; }
+  .btn-green::after {
+    background-color: #55c57a; }
 
 .btn-animate {
   animation: moveInBottom .5s ease-out .75s;
@@ -389,9 +413,9 @@ body {
 .card {
   perspective: 150rem;
   position: relative;
-  height: 50rem; }
+  height: 52rem; }
   .card-side {
-    height: 50rem;
+    height: 52rem;
     transition: all .8s ease;
     -webkit-transition: all .8s ease;
     -moz-transition: all .8s ease;
@@ -420,6 +444,10 @@ body {
       -o-transform: rotateY(180deg); }
       .card-side-back-1 {
         background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+      .card-side-back-2 {
+        background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+      .card-side-back-3 {
+        background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
   .card:hover .card-side-front {
     transform: rotateY(-180deg);
     -webkit-transform: rotateY(-180deg);
@@ -436,10 +464,79 @@ body {
     background-size: cover;
     height: 23rem;
     background-blend-mode: screen;
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
     .card-picture-1 {
       background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg); }
     .card-picture-2 {
-      background-image: url(../img/nat-6.jpg); }
+      background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../img/nat-6.jpg); }
     .card-picture-3 {
-      background-image: url(../img/nat-6.jpg); }
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/nat-7.jpg); }
+  .card-heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-align: right;
+    text-transform: uppercase;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%;
+    margin: 0 1rem; }
+  .card-heading-span {
+    padding: 1rem 1.5rem;
+    box-decoration-break: clone;
+    -webkit-box-decoration-break: clone; }
+    .card-heading-span-1 {
+      background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85)); }
+    .card-heading-span-2 {
+      background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.85), rgba(40, 180, 133, 0.85)); }
+    .card-heading-span-3 {
+      background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85)); }
+  .card-details ul {
+    list-style: none;
+    width: 80%;
+    margin: 0 auto; }
+    .card-details ul li {
+      font-size: 1.5rem;
+      padding: 1rem; }
+      .card-details ul li:not(:last-child) {
+        border-bottom: 1px solid #f7f7f7; }
+  .card-cta {
+    width: 90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%); }
+  .card-price-box {
+    margin-bottom: 7rem;
+    color: #fff; }
+  .card-price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase; }
+  .card-price-value {
+    font-size: 6rem;
+    font-weight: 100; }
+
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  padding: 6rem;
+  font-size: 1.6rem; }
+  .story-shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    background-color: #ff7730;
+    shape-outside: circle(50% at 50% 50%); }
