--- a/sass/component/buttons.scss
+++ b/sass/component/buttons.scss
@@ -8,6 +8,15 @@
         }
     }
 
+    &-green {
+        background-color: $color-medium-green;
+        color: $color-white;
+
+        &::after {
+            background-color: $color-medium-green;
+        }
+    }
+
     &-animate {
         animation: moveInBottom .5s ease-out .75s;
         -webkit-animation: moveInBottom .5s ease-out .75s;
