--- a/sass/pages/sections.scss
+++ b/sass/pages/sections.scss
@@ -2,14 +2,24 @@
 
     &-about,
     &-tours {
-        padding: 25rem 0;
         margin-top: -25vh;
         background-color: $color-light-grey;
     }
 
+    &-about {
+        padding: 25rem 0;
+    }
+
+    &-tours {
+        padding: 25rem 0 10rem 0;
+    }
+
     &-features {
         padding: 20rem 0;
-        background-image: linear-gradient(to right bottom, rgba($color-light-green, 0.8), rgba($color-dark-green, 0.8)), url(../img/nat-4.jpg);
+        background-image: linear-gradient(to right bottom,
+                rgba($color-light-green, 0.8),
+                rgba($color-dark-green, 0.8)),
+            url(../img/nat-4.jpg);
         background-size: cover;
         transform: skewY(-7deg);
         -webkit-transform: skewY(-7deg);
@@ -25,5 +35,10 @@
             -ms-transform: skewY(8deg);
             -o-transform: skewY(8deg);
         }
+    }
+
+    &-stories{
+        padding: 15rem 0;
+        background-color: $color-light-grey;
     }
 }
