--- a/sass/abstract/variables.scss
+++ b/sass/abstract/variables.scss
@@ -7,6 +7,7 @@ $color-dark-orange : #ff7730;
 $color-light-blue : #2998ff;
 $color-dark-blue : #5643fa;
 $color-dark-grey : #777;
+$color-medium-grey: #999;
 $color-light-grey : #f7f7f7;
 $color-white : #fff;
 $color-black : #000;
