--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,5 @@
 @import "component/feature_box.scss";
 @import "component/card.scss";
 @import "component/story.scss";
+@import "component/bg-video.scss";
+@import "component/form.scss";
