--- a/sass/component/story.scss
+++ b/sass/component/story.scss
@@ -1,4 +1,5 @@
-.story{
+.story {
+    background-color: rgba($color-white, .6);
     width: 75%;
     margin: 0 auto;
     box-shadow: 0 3rem 6rem rgba($color-black, .1);
@@ -7,14 +8,87 @@
     -moz-border-radius: 3px;
     -ms-border-radius: 3px;
     -o-border-radius: 3px;
-    padding: 6rem;
+    padding: 6rem 6rem 6rem 9rem;
     font-size: $default-font-size;
+    transform: skewX(-12deg);
+    -webkit-transform: skewX(-12deg);
+    -moz-transform: skewX(-12deg);
+    -ms-transform: skewX(-12deg);
+    -o-transform: skewX(-12deg);
 
-    &-shape{
+    &-shape {
         width: 15rem;
         height: 15rem;
         float: left;
-        background-color: $color-dark-orange;
         shape-outside: circle(50% at 50% 50%);
+        clip-path: circle(50% at 50% 50%);
+        transform: skewX(12deg);
+        -webkit-transform: skewX(12deg);
+        -moz-transform: skewX(12deg);
+        -ms-transform: skewX(12deg);
+        -o-transform: skewX(12deg);
+        position: relative;
+    }
+
+    &-img {
+        height: 100%;
+        transform: translateX(-4rem) scale(1.4);
+        -webkit-transform: translateX(-4rem) scale(1.4);
+        -moz-transform: translateX(-4rem) scale(1.4);
+        -ms-transform: translateX(-4rem) scale(1.4);
+        -o-transform: translateX(-4rem) scale(1.4);
+        backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+        transition: all .5s;
+    }
+
+    &-text {
+        transform: translateX(3rem) skewX(12deg);
+        -webkit-transform: translateX(3rem) skewX(12deg);
+        -moz-transform: translateX(3rem) skewX(12deg);
+        -ms-transform: translateX(3rem) skewX(12deg);
+        -o-transform: translateX(3rem) skewX(12deg);
+    }
+
+    &-caption {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%, 0);
+        -webkit-transform: translate(-50%, 0);
+        -moz-transform: translateX(-50%, 0);
+        -ms-transform: translateX(-50%, 0);
+        -o-transform: translateX(-50%, 0);
+        font-size: 1.7rem;
+        text-align: center;
+        color: $color-white;
+        text-transform: uppercase;
+        opacity: 0;
+        transition: all .5s;
+        -webkit-transition: all .5s;
+        -moz-transition: all .5s;
+        -ms-transition: all .5s;
+        -o-transition: all .5s;
+        backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+    }
+
+    &:hover &-caption {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        -o-transform: translate(-50%, -50%);
+    }
+
+    &:hover &-img {
+        transform: translateX(-4rem) scale(1);
+        -webkit-transform: translateX(-4rem) scale(1);
+        -moz-transform: translateX(-4rem) scale(1);
+        -ms-transform: translateX(-4rem) scale(1);
+        -o-transform: translateX(-4rem) scale(1);
+        filter: blur(3px) brightness(80%);
+        -webkit-filter: blur(3px) brightness(80%);
     }
 }
