--- a/sass/pages/sections.scss
+++ b/sass/pages/sections.scss
@@ -37,8 +37,31 @@
         }
     }
 
-    &-stories{
+    &-stories {
         padding: 15rem 0;
-        background-color: $color-light-grey;
+        position: relative;
+    }
+
+    &-book {
+        padding: 15rem 0;
+        background-image: $color-gradient-green;
+    }
+}
+
+.book {
+    background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 50%, transparent 50%), url(../img/nat-10.jpg);
+    background-size: 100%;
+    //100% means the same thing as cover ////////////
+    height: 50rem;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+
+    &-form{
+        width: 50%;
+        padding: 6rem;
     }
 }
