--- a/sass/abstract/variables.scss
+++ b/sass/abstract/variables.scss
@@ -6,6 +6,7 @@ $color-light-orange : #ffb900;
 $color-dark-orange : #ff7730;
 $color-light-blue : #2998ff;
 $color-dark-blue : #5643fa;
+$color-darker-grey : #333;
 $color-dark-grey : #777;
 $color-medium-grey: #999;
 $color-light-grey : #f7f7f7;
