--- a/sass/base/utilities.scss
+++ b/sass/base/utilities.scss
@@ -1,18 +1,23 @@
 .u-center-text {
-    text-align: center;
+    text-align: center !important;
 }
-.u-mb-lg{
+
+.u-mb-lg {
     margin-bottom: 8rem;
 }
-.u-mb-md{
-    margin-bottom: 4rem;
+
+.u-mb-md {
+    margin-bottom: 4rem !important;
 }
-.u-mb-sm{
-    margin-bottom: 1.5rem;
+
+.u-mb-sm {
+    margin-bottom: 1.5rem !important;
 }
-.u-mt-lg{
-    margin-top: 8rem;
+
+.u-mt-lg {
+    margin-top: 8rem !important;
 }
-.u-mt-xl{
-    margin-top: 10rem;
+
+.u-mt-xl {
+    margin-top: 10rem !important;
 }
