--- a/sass/component/form.scss
+++ b/sass/component/form.scss
@@ -18,6 +18,11 @@
         border-bottom: 3px solid transparent;
         width: 100%;
         display: block;
+        transition: all .3s;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+        -ms-transition: all .3s;
+        -o-transition: all .3s;
 
         &:focus {
             outline: none;
@@ -34,7 +39,7 @@
         }
     }
 
-    &-label{
+    &-label {
         font-size: 1.2rem;
         font-weight: 700;
         margin-top: .7rem;
@@ -45,9 +50,9 @@
         -moz-transition: all .3s;
         -ms-transition: all .3s;
         -o-transition: all .3s;
-}
+    }
 
-    &-input:placeholder-shown + &-label{
+    &-input:placeholder-shown+&-label {
         opacity: 0;
         visibility: hidden;
         transform: translateY(-4rem);
@@ -55,5 +60,67 @@
         -moz-transform: translateY(-4rem);
         -ms-transform: translateY(-4rem);
         -o-transform: translateY(-4rem);
+    }
+
+    &-radio-group {
+        width: 49%;
+        display: inline-block;
+    }
+
+    &-radio-input{
+        display: none;
+    }
+    
+    &-radio-label {
+        font-size: $default-font-size;
+        cursor: pointer;
+        position: relative;
+        padding-left: 4.5rem;
+    }
+
+    &-radio-btn {
+        height: 3rem;
+        width: 3rem;
+        border: 5px solid $color-medium-green;
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        display: inline-block;
+        position: absolute;
+        top: -.4rem;
+        left: 0;
+
+        &::after {
+            content: "";
+            display: block;
+            height: 1.3rem;
+            width: 1.3rem;
+            border-radius: 50%;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+            background-color: $color-medium-green;
+            opacity: 0;
+            transition: opacity .2s;
+            -webkit-transition: opacity .2s;
+            -moz-transition: opacity .2s;
+            -ms-transition: opacity .2s;
+            -o-transition: opacity .2s;
+}
+    }
+
+    &-radio-input:checked ~ &-radio-label &-radio-btn::after{
+        opacity: 1;
     }
 }
