complete_lg-screen_design

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,3 +21,4 @@
 @import "component/story.scss";
 @import "component/bg-video.scss";
 @import "component/form.scss";
+@import "component/popup.scss";
