--- a/css/style.css
+++ b/css/style.css
@@ -942,3 +942,87 @@ body {
 
 .form-radio-input:checked ~ .form-radio-label .form-radio-btn::after {
   opacity: 1; }
+
+.popup {
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 7;
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s; }
+  .popup-content {
+    display: inline-block;
+    width: 75%;
+    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.2);
+    -webkit-transform: translate(-50%, -50%) scale(0.2);
+    -moz-transform: translate(-50%, -50%) scale(0.2);
+    -ms-transform: translate(-50%, -50%) scale(0.2);
+    -o-transform: translate(-50%, -50%) scale(0.2);
+    display: table;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    overflow: hidden;
+    opacity: 0;
+    transition: all .4s .2s;
+    -webkit-transition: all .4s .2s;
+    -moz-transition: all .4s .2s;
+    -ms-transition: all .4s .2s;
+    -o-transition: all .4s .2s; }
+  .popup-left {
+    width: 33.333%;
+    display: table-cell; }
+  .popup-right {
+    width: 66.667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem; }
+  .popup-img {
+    display: block;
+    width: 100%; }
+  .popup-text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #f7f7f7; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup-content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    -moz-transform: translate(-50%, -50%) scale(1);
+    -ms-transform: translate(-50%, -50%) scale(1);
+    -o-transform: translate(-50%, -50%) scale(1); }
+  .popup-close:link, .popup-close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all .2s;
+    -webkit-transition: all .2s;
+    -moz-transition: all .2s;
+    -ms-transition: all .2s;
+    -o-transition: all .2s;
+    line-height: 1; }
+  .popup-close:hover {
+    color: #55c57a; }
