--- a/css/style.css
+++ b/css/style.css
@@ -159,9 +159,15 @@ body {
 
 .u-mb-lg {
   margin-bottom: 8rem; }
+  @media (max-width: 56.25em) {
+    .u-mb-lg {
+      margin-bottom: 5rem !important; } }
 
 .u-mb-md {
   margin-bottom: 4rem !important; }
+  @media (max-width: 56.25em) {
+    .u-mb-md {
+      margin-bottom: 3rem !important; } }
 
 .u-mb-sm {
   margin-bottom: 1.5rem !important; }
@@ -177,8 +183,14 @@ body {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   position: relative; }
+  @media (max-width: 56.25em) {
+    .header {
+      clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); } }
+  @media (max-width: 37.5em) {
+    .header {
+      clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%); } }
   .header-logo-box {
     position: absolute;
     top: 4rem;
@@ -201,7 +213,8 @@ body {
   margin: 0 auto; }
   @media (max-width: 56.25em) {
     .row {
-      max-width: 50rem; } }
+      max-width: 50rem;
+      padding: 0 3rem; } }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
     @media (max-width: 56.25em) {
@@ -240,9 +253,15 @@ body {
   padding: 10rem 0;
   font-size: 1.4rem;
   color: #f7f7f7; }
+  @media (max-width: 56.25em) {
+    .footer {
+      padding: 8rem 0; } }
   .footer-logo-box {
     text-align: center;
     margin-bottom: 8rem; }
+    @media (max-width: 56.25em) {
+      .footer-logo-box {
+        margin-bottom: 6rem; } }
   .footer-logo {
     width: 15rem;
     height: auto; }
@@ -250,6 +269,10 @@ body {
     border-top: 1px solid #777;
     padding-top: 2rem;
     display: inline-block; }
+    @media (max-width: 56.25em) {
+      .footer-nav {
+        width: 100%;
+        text-align: center; } }
   .footer-list {
     list-style: none; }
   .footer-item {
@@ -275,6 +298,11 @@ body {
     padding-top: 2rem;
     width: 80%;
     float: right; }
+    @media (max-width: 56.25em) {
+      .footer-copyright {
+        width: 100%;
+        float: none;
+        text-align: center; } }
 
 .navigation-checkbox {
   display: none; }
@@ -297,6 +325,14 @@ body {
   -moz-transition: transform .8s;
   -ms-transition: transform .8s;
   -o-transition: transform .8s; }
+  @media (max-width: 56.25em) {
+    .navigation-background {
+      top: 4.5rem;
+      right: 4.5rem; } }
+  @media (max-width: 37.5em) {
+    .navigation-background {
+      top: 3.5rem;
+      right: 3.5rem; } }
 
 .navigation-btn {
   background-color: #fff;
@@ -314,6 +350,14 @@ body {
   text-align: center;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
   cursor: pointer; }
+  @media (max-width: 56.25em) {
+    .navigation-btn {
+      top: 4rem;
+      right: 4rem; } }
+  @media (max-width: 37.5em) {
+    .navigation-btn {
+      top: 3rem;
+      right: 3rem; } }
 
 .navigation-nav {
   height: 100vh;
@@ -431,14 +475,24 @@ body {
   -o-transform: rotate(-135deg); }
 
 .section-about, .section-tours {
-  margin-top: -25vh;
   background-color: #f7f7f7; }
 
 .section-about {
+  margin-top: -20vh;
   padding: 25rem 0; }
+  @media (max-width: 56.25em) {
+    .section-about {
+      padding: 30rem 0; } }
+  @media (max-width: 37.5em) {
+    .section-about {
+      padding: 23rem 0; } }
 
 .section-tours {
-  padding: 25rem 0 10rem 0; }
+  padding: 25rem 0 10rem 0;
+  margin-top: -10rem; }
+  @media (max-width: 56.25em) {
+    .section-tours {
+      padding: 20rem 0 8rem 0; } }
 
 .section-features {
   padding: 20rem 0;
@@ -449,17 +503,23 @@ body {
   -moz-transform: skewY(-7deg);
   -ms-transform: skewY(-7deg);
   -o-transform: skewY(-7deg);
-  margin-top: -15vh; }
+  margin-top: -10vh; }
   .section-features > * {
     transform: skewY(8deg);
     -webkit-transform: skewY(8deg);
     -moz-transform: skewY(8deg);
     -ms-transform: skewY(8deg);
     -o-transform: skewY(8deg); }
+  @media (max-width: 56.25em) {
+    .section-features {
+      padding: 10rem 0; } }
 
 .section-stories {
   padding: 15rem 0;
   position: relative; }
+  @media (max-width: 56.25em) {
+    .section-stories {
+      padding: 10rem 0; } }
 
 .section-book {
   padding: 15rem 0;
@@ -610,15 +670,46 @@ body {
     -ms-transition: all .3s;
     -o-transition: all .3s;
     outline-offset: 1.5rem; }
+    @media (max-width: 56.25em) {
+      .composition-photo {
+        float: left;
+        position: relative;
+        width: 33.333%;
+        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
     .composition-photo-1 {
       left: 0;
       top: -2rem; }
+      @media (max-width: 56.25em) {
+        .composition-photo-1 {
+          top: 0;
+          transform: scale(1.2);
+          -webkit-transform: scale(1.2);
+          -moz-transform: scale(1.2);
+          -ms-transform: scale(1.2);
+          -o-transform: scale(1.2); } }
     .composition-photo-2 {
       right: 0;
       top: 2rem; }
+      @media (max-width: 56.25em) {
+        .composition-photo-2 {
+          top: 0;
+          transform: scale(1.3);
+          -webkit-transform: scale(1.3);
+          -moz-transform: scale(1.3);
+          -ms-transform: scale(1.3);
+          -o-transform: scale(1.3); } }
     .composition-photo-3 {
       left: 20%;
       top: 10rem; }
+      @media (max-width: 56.25em) {
+        .composition-photo-3 {
+          top: 0;
+          left: 0;
+          transform: scale(1.4);
+          -webkit-transform: scale(1.4);
+          -moz-transform: scale(1.4);
+          -ms-transform: scale(1.4);
+          -o-transform: scale(1.4); } }
     .composition-photo:hover {
       outline: 1rem solid #7ed56f;
       transform: scale(1.05) translateY(-0.5rem);
@@ -650,6 +741,9 @@ body {
   -moz-transition: all .3s;
   -ms-transition: all .3s;
   -o-transition: all .3s; }
+  @media (max-width: 56.25em) {
+    .feature-box {
+      padding: 2rem; } }
   .feature-box-icon {
     font-size: 6rem;
     background-image: linear-gradient(to right, #7ed56f, #28b485);
@@ -657,6 +751,9 @@ body {
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent; }
+    @media (max-width: 56.25em) {
+      .feature-box-icon {
+        margin-bottom: 0; } }
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03);
     -webkit-transform: translateY(-1.5rem) scale(1.03);
