--- a/sass/component/composition.scss
+++ b/sass/component/composition.scss
@@ -18,19 +18,54 @@
         -o-transition: all .3s;
         outline-offset: 1.5rem;
 
+        @include respond (tab-port) {
+            float: left;
+            position: relative;
+            width: 33.333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+        }
+
         &-1 {
             left: 0;
             top: -2rem;
+
+            @include respond (tab-port) {
+                top: 0;
+                transform: scale(1.2);
+                -webkit-transform: scale(1.2);
+                -moz-transform: scale(1.2);
+                -ms-transform: scale(1.2);
+                -o-transform: scale(1.2);
+}
         }
 
         &-2 {
             right: 0;
             top: 2rem;
+
+            @include respond (tab-port) {
+                top: 0;
+                transform: scale(1.3);
+                -webkit-transform: scale(1.3);
+                -moz-transform: scale(1.3);
+                -ms-transform: scale(1.3);
+                -o-transform: scale(1.3);
+}
         }
 
         &-3 {
             left: 20%;
             top: 10rem;
+
+            @include respond (tab-port) {
+                top: 0;
+                left: 0;
+                transform: scale(1.4);
+                -webkit-transform: scale(1.4);
+                -moz-transform: scale(1.4);
+                -ms-transform: scale(1.4);
+                -o-transform: scale(1.4);
+}
         }
 
         &:hover {
