--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -4,9 +4,17 @@
     font-size: 1.4rem;
     color: $color-light-grey;
 
+    @include respond (tab-port){
+        padding: 8rem 0
+    }
+
     &-logo-box {
         text-align: center;
         margin-bottom: 8rem;
+
+        @include respond (tab-port){
+            margin-bottom: 6rem;
+        }
     }
 
     &-logo {
@@ -18,6 +26,11 @@
         border-top: 1px solid $color-dark-grey;
         padding-top: 2rem;
         display: inline-block;
+
+        @include respond (tab-port){
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &-list {
@@ -60,5 +73,11 @@
         padding-top: 2rem;
         width: 80%;
         float: right;
+    
+        @include respond (tab-port) {
+            width: 100%;
+            float: none;
+            text-align: center;
+        }
     }
 }
