--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -4,6 +4,7 @@
 
     @include respond (tab-port) {
         max-width: 50rem;
+        padding: 0 3rem;
     }
 
     &:not(:last-child) {
@@ -13,6 +14,7 @@
             margin-bottom: $gutter-vertical-md;
         }
     }
+    
 
 
     @include clearfix;
