--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -3,8 +3,15 @@
     background-image: linear-gradient(to right bottom, rgba($color-light-green, 0.8), rgba($color-dark-green, 0.8)), url(../img/hero.jpg);
     background-size: cover;
     background-position: top;
-    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     position: relative;
+
+    @include respond (tab-port) {
+        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
+    @include respond (phone) {
+        clip-path: polygon(0 0, 100% 0, 100% 90vh, 0 100%);
+    }
 
     &-logo-box {
         position: absolute;
