--- a/sass/layout/navigation.scss
+++ b/sass/layout/navigation.scss
@@ -22,6 +22,16 @@
         -moz-transition: transform .8s;
         -ms-transition: transform .8s;
         -o-transition: transform .8s;
+
+        @include respond (tab-port) {
+            top: 4.5rem;
+            right: 4.5rem;
+        }
+
+        @include respond (phone) {
+            top: 3.5rem;
+            right: 3.5rem;
+        }
     }
 
     &-btn {
@@ -40,6 +50,16 @@
         text-align: center;
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
         cursor: pointer;
+
+        @include respond (tab-port) {
+            top: 4rem;
+            right: 4rem;
+        }
+
+        @include respond (phone) {
+            top: 3rem;
+            right: 3rem;
+        }
     }
 
     &-nav {
