--- a/sass/pages/sections.scss
+++ b/sass/pages/sections.scss
@@ -2,16 +2,28 @@
 
     &-about,
     &-tours {
-        margin-top: -25vh;
         background-color: $color-light-grey;
     }
 
     &-about {
+        margin-top: -20vh;
         padding: 25rem 0;
+
+        @include respond (tab-port){
+            padding: 30rem 0;
+        }
+        @include respond (phone) {
+            padding: 23rem 0;
+        }
     }
 
     &-tours {
         padding: 25rem 0 10rem 0;
+        margin-top: -10rem;
+
+        @include respond (tab-port) {
+            padding: 20rem 0 8rem 0;
+        }
     }
 
     &-features {
@@ -26,7 +38,8 @@
         -moz-transform: skewY(-7deg);
         -ms-transform: skewY(-7deg);
         -o-transform: skewY(-7deg);
-        margin-top: -15vh;
+        margin-top: -10vh;
+
 
         &>* {
             transform: skewY(8deg);
@@ -35,11 +48,20 @@
             -ms-transform: skewY(8deg);
             -o-transform: skewY(8deg);
         }
+
+        @include respond (tab-port) {
+            padding: 10rem 0;
+        }
     }
+
 
     &-stories {
         padding: 15rem 0;
         position: relative;
+
+        @include respond (tab-port) {
+            padding: 10rem 0;
+        }
     }
 
     &-book {
